# KORC_GPU

./: CMakeLists.txt  launch  setup_cmake
src/: CMakeLists.txt  Makefile  README.txt  bicube.f90  cmake_install.cmake  computation_pointers.f90  config.f  dump_ser.F90  edge.f90  edge_type_mod.f90  exchange.f90  fft2d.F90  fft_mod.F90  fields.f90  get_fields.f90  get_git_details.sh~  git_diff.txt  git_hash.txt  global.F90  hdf5_fcapi.F90  hdf5_psapi.f90  input.F90  integrand_comp.finc  integrand_comp_rhs.finc  integrand_real.finc  integrand_real_rhs.finc  interp_gpu.f90  io.F90  korc_HDF5.f90  korc_collisions.f90  korc_fields.f90  korc_fio_interface.f90~  korc_initialize.f90  korc_input.f90  korc_interp.f90  korc_ppusher.f90  korc_test.f90~  korc_types.f90  korc_units.f90  lagr_disc_quad.f90  (+31 more)
